--- a/packages/polar-eslint/package.json
+++ b/packages/polar-eslint/package.json
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "=8.3.0",
     "eslint-config-standard-with-typescript": "=21.0.1",
     "eslint-plugin-import": "=2.24.2",
+    "eslint-plugin-functional": "=4.0.2",
     "eslint-plugin-jsdoc": "=36.1.0",
     "eslint-plugin-node": "=11.1.0",
     "eslint-plugin-unused-imports": "=1.1.5",
