--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@aws-cdk/aws-apigateway": "=1.121.0",
     "@aws-cdk/aws-lambda-nodejs": "=1.121.0",
+    "@aws-cdk/aws-elasticsearch": "=1.121.0",
     "@aws-cdk/core": "=1.121.0",
     "@types/node-fetch": "2.5.7",
     "firebase": "=8.8.1",
