--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,7 +430,7 @@ jobs:
       executor:
         type: executor
     executor: << parameters.executor >>
-    description: build node Environment)
+    description: Build node Environment
     steps:
       - checkout
       - run:
@@ -438,18 +438,18 @@ jobs:
           command: |
             git fetch
             CURRENT_VERSION=$(git tag | tr - \~ | sort -V | tr \~ - | tail -n1)
-            mv /home/circleci/project/packages/polar-mobile-app /home/circleci/
+            mv /home/circleci/project/packages-isolated/mobile /home/circleci/
             rm -rf /home/circleci/project
       - run:
           name: yarn install
           command: |
-            cd /home/circleci/polar-mobile-app
+            cd /home/circleci/mobile
             sed -i "s/0.0.0/$CURRENT_VERSION/g" package.json
             yarn install
       - persist_to_workspace:
           root: /home/circleci/
           paths:
-            - polar-mobile-app
+            - mobile
 
   # @ Build fastlane for deployment
   Android-Internal:
@@ -458,7 +458,7 @@ jobs:
         type: executor
     executor: << parameters.executor>>
     description: build fastlane for ci
-    working_directory: ~/polar-mobile-app/android
+    working_directory: ~/mobile/android
     steps:
       - attach_workspace:
           at: ~/
@@ -485,7 +485,7 @@ jobs:
         type: executor
     executor: << parameters.executor>>
     description: build fastlane for ci
-    working_directory: ~/polar-mobile-app/android
+    working_directory: ~/mobile/android
     steps:
       - attach_workspace:
           at: ~/
@@ -507,7 +507,7 @@ jobs:
             bundle exec fastlane release
 
   IOS-Testflight:
-    working_directory: ~/polar-mobile-app/ios
+    working_directory: ~/mobile/ios
     macos:
       xcode: "13.0.0"
     shell: /bin/bash --login -o pipefail
@@ -529,7 +529,7 @@ jobs:
             bundle exec fastlane beta
 
   IOS-Release:
-    working_directory: ~/polar-mobile-app/ios
+    working_directory: ~/mobile/ios
     macos:
       xcode: "13.0.0"
     shell: /bin/bash --login -o pipefail
