--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "bash": "docker build --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) -f Dockerfile -t polar . && docker run -v $(pwd):/polar-app:delegated -w /polar-app -u $(id -u ${USER}):$(id -g ${USER}) -e WEBPACK_BUNDLE=repository -p 8050:8050 -p 8051:8051 -ti --rm --init --ulimit memlock=819200000:819200000 polar bash",
-    "bootstrap": "lerna bootstrap && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link",
-    "bootstrap-ci": "lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link",
-    "eslint": "lerna run eslint --no-bail",
-    "compile": "lerna run compile",
+    "eslint": "pnpm m run eslint --no-bail",
+    "compile": "pnpm m run run compile",
+    "test": "pnpm m run test",
     "publish": "lerna exec --no-private -- yarn publish --no-bail",
     "set-registry-verdaccio": "rm -f ~/.npmrc && cat .npmrc > ~/.npmrc",
-    "lerna-run-dist": "lerna run --concurrency=1 --parallel=false --stream dist",
-    "lerna-run-test": "lerna run --concurrency=1 --parallel=false test",
-    "rebuild": "yarn run purge-node-modules && lerna bootstrap && lerna run compile",
-    "dist-validate-env": "./sbin/dist-validate-env.sh",
-    "dist-clean": "git clean -Xfd && git clean -fd",
-    "dist-build": "yarn run purge-node-modules && lerna bootstrap && yarn run lerna-run-compile && yarn run lerna-run-dist",
+    "clean": "git clean -Xfd && git clean -fd",
     "do-release-webapp": "yarn run dist-publish && lerna run --concurrency=1 --parallel=false dist-release",
     "do-release-macos": "cd packages/polar-bookshelf && ./scripts/dist-release.sh macos",
     "do-release-init": "yarn run dist-clean && yarn run purge-node-modules && lerna bootstrap && yarn run lerna-run-compile",
@@ -30,16 +25,10 @@
     "dist-release-win": "yarn run do-release-init && yarn run do-release-win",
     "dist-release-macos": "yarn run do-release-init && yarn run do-release-macos",
     "dist-release-site": "cd packages/polar-site2 && yarn run publish",
-    "purge-node-modules": "rm -rf node_modules && npx lerna exec --concurrency=1 --parallel=false -- rm -rf node_modules",
-    "ls-packages": "lerna exec --concurrency=1 --parallel=false --no-bail -- 'echo ${PWD}'",
-    "find-broken-imports": "find . -type f -name \"*.ts\" ! -path '*/node_modules/*' |xargs grep import |grep -E \"[\\\"'](\\.\\./)+polar\"\n",
     "find-package-versions": "lerna exec --concurrency=1 --parallel=false --no-private -- jq -r .dependencies package.json  |grep -Eo '^  [^,]+' | sort",
     "find-package-versions-conflicting": "yarn run find-package-versions | uniq | grep -Eo '^[^:]+' |uniq -c |sort |grep -Ev '^[ ]+1 '",
-    "bootstrap-with-link": "lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && npx lerna link",
     "create-module": "(cd ./packages/polar-create-module && node src/CreateModule.js)",
-    "update-modules": "lerna run --scope polar-create-module compile && lerna exec -- node $(pwd)/packages/polar-create-module/src/CreateModule.js --update",
-    "yarn-lock-conflicts": "cat yarn.lock |grep -E \"^[^ \\\"]\" |sort |grep -Eo \"^[^@]+\" |sort |uniq -c |sort -r |grep -v ' 1'",
-    "yarn-lock-conflicts-score": "yarn run yarn-lock-conflicts | grep -Eo '^[ ]*[0-9]+' |grep -Eo '[0-9]+$' |  paste -sd+ /dev/stdin | bc -l"
+    "update-modules": "lerna run --scope polar-create-module compile && lerna exec -- node $(pwd)/packages/polar-create-module/src/CreateModule.js --update"
   },
   "author": "",
   "license": "ISC",
