--- a/package.json
+++ b/package.json
@@ -11,22 +11,9 @@
     "eslint": "pnpm m run eslint --no-bail",
     "compile": "pnpm m run run compile",
     "test": "pnpm m run test",
-    "publish": "lerna exec --no-private -- yarn publish --no-bail",
-    "set-registry-verdaccio": "rm -f ~/.npmrc && cat .npmrc > ~/.npmrc",
+    "publish": "pnpm m publish",
     "clean": "git clean -Xfd && git clean -fd",
-    "do-release-webapp": "yarn run dist-publish && lerna run --concurrency=1 --parallel=false dist-release",
-    "do-release-macos": "cd packages/polar-bookshelf && ./scripts/dist-release.sh macos",
-    "do-release-init": "yarn run dist-clean && yarn run purge-node-modules && lerna bootstrap && yarn run lerna-run-compile",
-    "do-release-win": "cd packages/polar-bookshelf && ./scripts/dist-release.sh win",
-    "do-release-linux": "cd packages/polar-bookshelf && ./scripts/dist-release.sh linux",
-    "dist-release-publish": "yarn run dist-prepare && yarn run dist-build && yarn run dist-publish",
-    "dist-release-webapp": "yarn run set-registry-verdaccio && lerna bootstrap && lerna run compile && lerna run test && lerna run publish && (cd packages/polar-webapp-dist && yarn run dist) && (cd packages/polar-hooks && yarn run dist-release)",
-    "dist-release-webapp-init": "lerna bootstrap && lerna run compile && lerna run test && (cd packages/polar-webapp-dist && yarn run dist)",
-    "dist-release-webapp-release": "(cd packages/polar-hooks && yarn run dist-release)",
-    "dist-release-linux": "yarn run do-release-init && yarn run do-release-linux",
-    "dist-release-win": "yarn run do-release-init && yarn run do-release-win",
-    "dist-release-macos": "yarn run do-release-init && yarn run do-release-macos",
-    "dist-release-site": "cd packages/polar-site2 && yarn run publish",
+    "set-registry-verdaccio": "rm -f ~/.npmrc && cat .npmrc > ~/.npmrc",
     "find-package-versions": "lerna exec --concurrency=1 --parallel=false --no-private -- jq -r .dependencies package.json  |grep -Eo '^  [^,]+' | sort",
     "find-package-versions-conflicting": "yarn run find-package-versions | uniq | grep -Eo '^[^:]+' |uniq -c |sort |grep -Ev '^[ ]+1 '",
     "create-module": "(cd ./packages/polar-create-module && node src/CreateModule.js)",
