--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -704,6 +704,8 @@ workflows:
                 - master
 
   IOS-Android:
+    when:
+      equal: [master, << pipeline.git.branch >>]
     jobs:
       - Approve-Android-Internal:
           type: approval
