--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -704,8 +704,8 @@ workflows:
                 - master
 
   IOS-Android:
-    when:
-      equal: [master, << pipeline.git.branch >>]
+#    when:
+#      equal: [master, << pipeline.git.branch >>]
     jobs:
       - Approve-Android-Internal:
           type: approval
