--- a/packages/polar-backend-datastore/package.json
+++ b/packages/polar-backend-datastore/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "polar-bookshelf": "0.0.0",
-    "polar-shared": "0.0.0"
+    "polar-shared": "0.0.0",
+    "polar-shared-datastore": "0.0.0"
   },
   "devDependencies": {
     "polar-eslint": "0.0.0",
