--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "=17.0.2",
     "polar-firebase-test": "0.0.0",
     "polar-firebase-browser": "0.0.0",
+    "polar-shared-datastore": "0.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-eslint": "0.0.0",
