--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else pnpm run mocha; fi;",
-    "_compile": "yarn run tsc && yarn run generate-release-metadata",
+    "_compile": "pnpm run tsc && pnpm run generate-release-metadata",
     "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else pnpm run tsc; fi;",
     "_build": "node src/ReleaseMetadataGenerator.js ../../polar-site/_posts/",
     "build": "echo noop",
