--- a/packages/polar-hooks/package.json
+++ b/packages/polar-hooks/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "emulator": "firebase emulators:start",
     "firebase-deploy-functions": "./sbin/firebase-deploy-functions",
-    "dist-release-polar-cors": "firebase use polar-cors && yarn run firebase-deploy-functions",
-    "dist-release-polar-cors-beta": "firebase use polar-cors-beta && yarn run firebase-deploy-functions",
-    "dist-release-main-webapp": "echo Pushing to target ${FIREBASE_HOSTING_TARGET} && firebase use polar-32b0f && firebase target:clear hosting app.getpolarized.io && firebase target:apply hosting app.getpolarized.io ${FIREBASE_HOSTING_TARGET} && firebase deploy --only hosting,storage,firestore && yarn rur firebase-deploy-functions",
-    "dist-release-init": "(cd functions && yarn install)",
-    "dist-release": "yarn run dist-release-init && yarn run dist-release-main-webapp",
+    "dist-release-polar-cors": "firebase use polar-cors && pnpm run firebase-deploy-functions",
+    "dist-release-polar-cors-beta": "firebase use polar-cors-beta && pnpm run firebase-deploy-functions",
+    "dist-release-main-webapp": "echo Pushing to target ${FIREBASE_HOSTING_TARGET} && firebase use polar-32b0f && firebase target:clear hosting app.getpolarized.io && firebase target:apply hosting app.getpolarized.io ${FIREBASE_HOSTING_TARGET} && firebase deploy --only hosting,storage,firestore && pnpm rur firebase-deploy-functions",
+    "dist-release-init": "(cd functions && pnpm install)",
+    "dist-release": "pnpm run dist-release-init && pnpm run dist-release-main-webapp",
     "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else pnpm run tsc; fi;",
     "dist": "echo noop",
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else pnpm run mocha; fi;",
